--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Cinema.Backend\packages.config" />
+  <repository path="..\Cinema.Entity\packages.config" />
 </repositories>
