--- a/src/Cinema.Backend/Web.config
+++ b/src/Cinema.Backend/Web.config
@@ -1,5 +1,18 @@
 ﻿<?xml version="1.0"?>
 <configuration>
+  <connectionStrings>
+    <!--<add name="CinemaDatabase"
+         connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=CinemaWorkshop;Integrated Security=True;"
+         providerName="System.Data.EntityClient"/>-->
+
+    <!--<add name="CinemaDatabase"
+         connectionString="Data Source=.\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=YourDatabaseName"
+         providerName="System.Data.SqlClient" />-->
+
+    <add name="CinemaDatabase"
+     connectionString="Server=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|CinemaWorkshop.mdf;Database=CinemaWorkshop;Trusted_Connection=Yes;"
+     providerName="System.Data.SqlClient" />
+  </connectionStrings>
 
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
